--- a/WebContent/public/css/index.css
+++ b/WebContent/public/css/index.css
@@ -304,3 +304,22 @@ a.user-ico span {
 	line-height: 30px;
 }
 
+/*-- button --*/
+.btn{
+	border-radius: 3px;
+	padding: 0 12px;
+	font-size: 14px;
+	line-height: 35px;
+	height: 35px;
+	background: #fff;
+	background: -webkit-gradient(linear,0 0,0 100%,from(#fafafa),to(#f2f2f2));
+	border: 1px solid #d9d9d9;
+	box-shadow: :inset 0 1px 0 white,0 1px 0 rgba(255,255,255,3);
+	cursor: pointer;
+}
+
+.rbtn{
+	background: -webkit-gradient(linear,0 0,0 100%,from(#e53e49),to(#d43636));
+	color: #fff;
+}
+
