--- a/WebContent/public/css/user.css
+++ b/WebContent/public/css/user.css
@@ -5,7 +5,7 @@
 	padding-left: 20px;
 	color: #333;
 	font-size: 18px;
-	border-bottom: dotted 1px #333;
+	border-bottom: dashed 1px #ccc;
 }
 .edit-title h3{
 	margin:10px 0; 
@@ -23,6 +23,10 @@
 	width: 250px;
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.05);
 	-webkit-transition: color .2s linear,border-color .3s linear;
+}
+.edit-form{
+	padding: 20px 0;
+	margin-left: 50px;
 }
 .edit-form table td{
 	padding: 7px 2px;
