--- a/WebContent/public/css/login.css
+++ b/WebContent/public/css/login.css
@@ -18,7 +18,9 @@ body {
     -moz-background-size: cover;
     background-size: cover;
 }
-
+.login-form-box{
+    position: relative;
+}
 .login-form {
     /* Size and position */
     width: 300px;
@@ -196,3 +198,49 @@ body {
     float: right;
     cursor: pointer;
 }
+.btn{
+    border-radius: 3px;
+    padding: 0 12px;
+    font-size: 14px;
+    line-height: 35px;
+    height: 35px;
+    background: #fff;
+    background: -webkit-gradient(linear,0 0,0 100%,from(#fafafa),to(#f2f2f2));
+    border: 1px solid #d9d9d9;
+    box-shadow: :inset 0 1px 0 white,0 1px 0 rgba(255,255,255,3);
+    cursor: pointer;
+}
+.choose{
+    color: #fff;
+    font-family: "Microsoft Yahei";
+    border: #A38E70 1px solid;
+    padding: 10px 15px;
+    border-radius: 5px;
+    width: 220px;
+    text-shadow: 0 1px 1px rgba(0,0,0,0.3);
+    background: rgba(255,255,255,0.1);
+    border-radius: 5px;
+    box-shadow: 0 0 5px #666;
+    position: absolute;
+    right: 300px;
+    top: 10px;
+}
+.option{
+    margin-top: 5px;
+}
+.choose i{
+    margin-right: 3px;
+}
+.choose a{
+    color: #634056;
+    padding: 8px 15px;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    text-shadow: none
+}
+.choose a i{
+    color: #fff;
+    text-shadow: 0 2px 1px rgba(0,0,0,0.3);
+}
+
